[package]
name = "orml-traits"
description = "Shared traits including `BasicCurrency`, `MultiCurrency`, `Auction` and more."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/traits"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"

[dependencies]
# scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
# serde = { version = "1.0.136", optional = true }
# codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
# num-traits = { version = "0.2.14", default-features = false }
# impl-trait-for-tuples = "0.2.2"
syn = { version = "1.0.96", features = ["full", "visit", "extra-traits"] }

# sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "sv-locked-for-gav-xcm-v3-and-bridges" }
# sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "sv-locked-for-gav-xcm-v3-and-bridges" }
# sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "sv-locked-for-gav-xcm-v3-and-bridges" }
# # frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "sv-locked-for-gav-xcm-v3-and-bridges" }
# frame-support = { git = "https://github.com/paritytech//substrate", branch = "sv-locked-for-gav-xcm-v3-and-bridges" }
# frame-support-procedural = { git = "https://github.com/paritytech//substrate", branch = "sv-locked-for-gav-xcm-v3-and-bridges" }
frame-support-procedural-tools = { git = "https://github.com/paritytech//substrate", branch = "sv-locked-for-gav-xcm-v3-and-bridges" }
# frame-support-procedural-tools-derive = { git = "https://github.com/paritytech//substrate", branch = "sv-locked-for-gav-xcm-v3-and-bridges" }
# frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

# xcm = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "locked-for-gav-xcm-v3-and-bridges" }

# orml-utilities = { path = "../utilities", version = "0.4.1-dev", default-features = false }

[features]
default = ["std"]
std = [
	# "serde",
	# "codec/std",
	# "scale-info/std",
	# "sp-runtime/std",
	# "sp-io/std",
	# "sp-std/std",
	# "num-traits/std",
	# "frame-support/std",
	# "frame-support-procedural/std",
	# "frame-support-procedural-tools/std",
	# "frame-support-procedural-tools-derive/std",
	# "orml-utilities/std",
	# "xcm/std",
	# "syn/std",
]
